tests/negative/regression/r33.orng
fn main() -> Int { 
    main += match const main = main ; 4 { _ => 3 } 
} 
